--- a/css/css-demo/styles/fixed-contact.css
+++ b/css/css-demo/styles/fixed-contact.css
@@ -15,6 +15,7 @@ h1#resume-title {
 
 section#contact-info p {
   display: inline;
+  font-size: .8em;
   padding-right: 20px;
   padding-left: 20px;
   border-right: 2px solid black;
