Move release 0 & 1 to practice.css to meet assignment requirements

--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -1,3 +1,24 @@
+#contact-info p {
+  display: inline;
+  font-size: .8em;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-right: 2px solid black;
+}
+
+.job {
+  background-color: #e9e5dc;
+  border-radius: 15px;
+  margin: 10px;
+  padding: 1px 10px;
+}
+
+.list{
+  font-size: .8em;
+  line-height: 1.4em;
+  margin-top: -10px;
+}
+
 /* Release 2
 
 1. CSS Cascading - Cascading means that in a given stylesheet, more than one rule can be applicable to a piece of HTML, so cascading determines which specific stylesheet rule applies to which piece of HTML.
