--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,20 @@
+body {
+  max-width: 960px;
+}
+
+#external-links {
+  width: 200px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+main {
+  width: 700px;
+  display: inline-block;
+  vertical-align: top;
+
+}
+
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -9,13 +26,14 @@ cite {
   margin-top: 10px;
 }
 
-#external-links ul {
+/*#external-links ul {
   list-style-type: none;
   padding-left: 0px;
-}
+  width: 756px;
+}*/
 
 /* you're welcome to edit the
-image, figure, and figcaption CSS if you'd like, 
+image, figure, and figcaption CSS if you'd like,
 but it's optional! */
 img {
   width: 100%;
