--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -3,15 +3,18 @@ body {
 }
 
 #external-links {
-  width: 200px;
+  width: 20%;
   display: inline-block;
   vertical-align: top;
+  min-width: 100px;
 }
 
 main {
-  width: 700px;
+  width: 70%;
   display: inline-block;
   vertical-align: top;
+  margin-left: 1px;
+  min-width: 100px;
 
 }
 
@@ -26,11 +29,12 @@ cite {
   margin-top: 10px;
 }
 
-/*#external-links ul {
+#external-links ul {
   list-style-type: none;
   padding-left: 0px;
-  width: 756px;
-}*/
+  margin-right: 2px;
+  min-width: 100px;
+}
 
 /* you're welcome to edit the
 image, figure, and figcaption CSS if you'd like,
@@ -47,4 +51,23 @@ figure {
 figcaption {
   font-style: italic;
   text-align: right;
+}
+
+/*@media screen and (max-width: 500px) {
+  body {
+    background-color: hotpink;
+  }
+}*/
+
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 1em
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #external-links {
+    display: block;
+    width: 100%;
+  }
 }
